@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
         - Dist::Zilla::Tester no longer changes into the source directory when
           building. This may break some plugins that do not prepend
           $zilla->root to paths when they should.
+        - version strings must now pass version.pm's is_strict checks, which
+          eliminates such discouraged constructs as v1.23_01.
 
 6.015     2020-05-29 14:30:51-04:00 America/New_York
         - add docs for "dzil release -j" (thanks, Jonas B. Nielsen)
